--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -566,8 +566,37 @@
  ETS_hotan_emirate_DEF: "和阗埃米尔国"
 
 #红月亮
+ SIK_Abdukirim_Abbasof: "阿不都克里木·阿巴索夫"
+ POLITICS_Abdukirim_Abbasof_DESC:0 "阿巴索夫，作为在旧迪化城当中受过教育的知识分子，一贯深受莫斯莫里夫和波利诺夫的信任。当民族军被新疆军阀团团包围，陷入绝境时，他带着一部分部队向北突围，最终攻破了哈密国的防线，遁入了比北疆更加混乱的西蒙古。在此处，阿巴索夫接触了蒙古人民党，人民革命军和俄国红军的同志们，接受了正统的马克思主义教育。当新疆内战爆发时，他第一时间越过了阿尔泰的雪山，和阿合买提江留在新疆的各路游击队混合，加入了轰轰烈烈的民族独立战争当中。在他当选东突厥斯坦民主革命党主席后，新疆的未来已经明了，弱肉强食的荒漠中，平等和尊严再也不是笑话。"
+ SIK_Ehmetjan_Qasimi: "阿合买提江·哈斯木"
+ POLITICS_Ehmetjan_Qasimi_DESC:0 "哈斯木，家庭出身为小手工业者。幼年丧父、姐，与母相依为命艰难度日。后投靠舅舅并随其姓氏改现名。年轻时一直在伊犁的一间玻璃厂工作，在那里，他接触了民族军的地下宣传组织，接受了初步的马克思列宁主义思想培训。很快，金树仁的多次强征税款引起了当地少数民族的联合暴动，虽然被很快镇压，但剧烈的市场波动仍然导致了玻璃厂的倒闭，哈斯木只得回家放牧务农维持生计，南疆的农村如同大海中的岛屿，恶劣的生活环境和松散的分布让初来者误以为此处应当老死不相往来，然而事实并非如此，一盘散沙的村落以当地的清真寺，马德拉萨紧紧联合，发起了一次又一次声势浩大的起义。哈斯木思索良久，也许真主的教诲能与马克思的训导相得益彰？"
+ SIK_Saifuddin_Azizi: "赛福鼎·艾则孜"
+ SIK_Asgat_Iskhakov: "艾斯海提·伊斯哈科夫"
+ SIK_Dalelkhan_Sugirbayev: "达列力汗·苏古尔巴也夫"
+
+ ETS_our_father: "§Y和蔼的父§!"
+ ETS_our_leader: "§Y仁慈的主§!"
+
+ ETS_tian_shan_de_ying:0 "天山雄鹰"
+ ETS_xin_yang_de_rong_yao:0 "“信仰的荣誉”“§RSalah ad-Din”§!"
+
  ETS_red_totalist_party:0 "东突厥斯坦民族军"
  ETS_red_totalist_party_long:0 "东突厥斯坦民族军\n§g杨增新在北疆的苛捐杂税，自清朝以来混乱不堪，你中有我，我中有你的民族局势，以及最重要的一点：十月革命在北方轰轰烈烈的进行与失败，造就了这一支民族性仇恨交其他势力寡淡，其自身带有明确社会主义思潮指导的非正规民兵武装。民族军的势力如同滚雪球一般在准噶尔盆地发展，很可惜，其领袖莫斯莫里夫的军事行动葬送了民族军的前程，他和总指挥均被军阀武装击毙，数年的发展从此功亏一篑，在新疆内战时，其余党从村庄和蒙古边境从新集结，响应了泛突厥大会的起义。很明显，虽然其如今在北疆根深蒂固，但泛突厥大会一是组织完整，二是力量强大，三是有土耳其人在后撑腰，想必不用担心这一支方才重出江湖的武装掌控政局。§!"
+ ETS_red_totalist_party_one:0 "东突厥斯坦民主革命党"
+ ETS_red_totalist_party_one_long:0 "东突厥斯坦民主革命党\n§g在取得了整个新疆，民族军立刻开始吸纳新疆各民族的知识分子和马克思主义组织，以便建立一个现代性的政党和合格的无产阶级革命先锋队。在新的政党体系中，成员们对于新疆未来的前路分成了两派。大部分和阿合买提江留在北疆进行艰苦卓绝的游击战争的民兵武装和旧青年党泛突厥主义者支持他的崭新观点，或是被他包了一层伊斯兰教外衣的马克思主义理论给骗到。另一边，来自俄罗斯和蒙古的老红军们与选择与阿巴索夫站在一起，他们将会坚持政教分离的道路，与旧时代的残余划清界限。§!"
+ ETS_red_radical_socialist_party_one:0 "东突厥斯坦民主革命党"
+ ETS_red_radical_socialist_party_one_long:0 "东突厥斯坦民主革命党\n§g在取得了整个新疆，民族军立刻开始吸纳新疆各民族的知识分子和马克思主义组织，以便建立一个现代性的政党和合格的无产阶级革命先锋队。在新的政党体系中，成员们对于新疆未来的前路分成了两派。大部分和阿合买提江留在北疆进行艰苦卓绝的游击战争的民兵武装和旧青年党泛突厥主义者支持他的崭新观点，或是被他包了一层伊斯兰教外衣的马克思主义理论给骗到。另一边，来自俄罗斯和蒙古的老红军们与选择与阿巴索夫站在一起，他们将会坚持政教分离的道路，与旧时代的残余划清界限。§!"
+
+ ETS_guang_zi_bei_lai:0 "光自北来"
+ ETS_guang_zi_bei_lai_desc:0 "民族军的马蹄抓住青年党内乱之机，如狂潮一般翻越天山而下。六城之地数千年的混战和仇杀应当在此时终结。我们将用红色的血，洗净白色暴君给新疆各族人民造成的伤口..."
+ ETS_hong_se_yi_li:0 "红色伊犁河"
+ ETS_hong_se_yi_li_desc:0 "但凡是有点规模的封建地主集团几乎都在自发的红色恐怖中被屠戮一空，党组织花了好大的力气才将失控的游击队和民兵重新聚拢，急令乌斯满和他的部队回到阿勒泰地区接受组织审查。新疆已经混乱了太久，人民正在渴求和平和秩序到来，仇杀和冲突是时候停止了，不过在这之前，路线问题仍需解决。"
+
+ ETS_he_ai_de_fu:0 "和蔼的父"
+ ETS_he_ai_de_fu_desc:0 "阿不都克里木·阿巴索夫向来是民族军总指挥波利诺夫最受信任的副手。他是十月革命辐射到新疆的具体体现，他已经下定了决心，势必要在新疆重燃十月革命的烽火。"
+
+ ETS_ren_ci_de_zhu:0 "仁慈的主"
+ ETS_ren_ci_de_zhu_desc:0 "阿合买提江・哈斯木，在伊犁玻璃厂破产后回乡，他在破落的绿洲中目睹了无数以圣战为名的起义，这让他发现了蕴藏在古经中的巨大伟力——结社的组织力，虔诚的动员力，以及深深种在人民心中的对地上天国的期盼...正因如此，请你相信地上天国终将实现。"
 
  xinren.1.t:0 "击毙赤匪首领！"
  xinren.1.d:0 "一直在准噶尔地区活跃的红俄匪帮首领莫斯莫里夫近日在和布克塞尔劫掠时被当地民团俘获后施以私刑处死，其人所领导的“东突厥斯坦民族军”向来在伊犁，塔城，阿山一带兴风作浪，猖獗至极。\n\n其副手伊万·波利诺夫随后带数千部队大规模袭扰我境内，以图报复匪首莫斯莫里夫之死，其兵锋一度曾触迪化城下，所幸我军与哈密军齐心协力，将其全歼于逃窜路上，其继任者阿合买提江与阿巴索夫分兵逃窜，难成大气。"
@@ -578,3 +607,13 @@
  xinren.3.t:0 "第二次内战？"
  xinren.3.d:0 "在阅兵仪式中，被胁持的铁木尔将军不顾生死，试图夺枪被命中胸口，不治身亡。铁木尔的支持者当即调集了所有武装力量，以此为由冲进政府机关抓捕和清洗所有的非铁木尔伯克派的拥趸。麦斯武德的集团随即做出反击，喀什噶尔周边的阿訇被发放枪支，带着手下蜂拥入城加入混战。全疆各地的大城市也爆发了大规模的城市战争，新疆第二次内战的前兆愈演愈烈..."
  xinren.3.a:0 "和这帮虫豸在一起，怎么能治理好新疆呢！"
+ xinren.4.t:0 "民族军入城！"
+ xinren.4.d:0 "虽然阿勒甫金选择在内战当中支持麦斯武德，但弱小的联盟仍然难以抵抗铁木尔在军队中的绝对统治。迪化被铁木尔派完全占领的消息传来，走投无路的麦斯武德思前想后，最后以泛突厥大会的名义向伊宁城拍去了电报...\n\n早就已经出发的革命党人大喜过望，北方的红色浪潮打了精疲力竭的铁木尔派一个措手不及。民族军很快接连占领了天山的每一座城市，那些中立的势力纷纷望风而投降。出乎所有人意料的，东突厥斯坦革命党——这一内战的边缘势力带着十月革命的遗产统治了新疆。"
+ xinren.4.a:0 "和这帮虫豸在一起，怎么能治理好新疆呢！"
+ xinren.5.t:0 "击毙赤匪首领！"
+ xinren.5.d:0 "南疆的地主阿訇们打错算盘了，他们天真的以为民族军的战士们会为他们做马前卒，打倒了大暴君铁木尔的余孽后毕恭毕敬的把奶与蜜交给他们，自己又可以让他们舒舒服服的回到以前的生活，让他们再一次骑在牧民头上当巴依老爷。\n\n不，这再也不会发生了，给主的子民带来痛苦的国王，伯克，喀孜，巴依或者乡长，凡是腐朽的事物，凡是利己和自私，都将被不留余地的清算。\n\n“老子杀的就是你统治贵族！杀掉他几十万的贵族，杀光！”率先进入南疆的乌斯满骑着高大的骏马，其命令宛如雷电，愤怒的农民从四周将他簇拥，颂着经中的内容。\n\n“火狱是他们的床，也是他们的被，我要这样报酬不义之人。”\n\n“受压迫而被战斗者，已获准还击，因为他们确是受了委屈。”"
+ xinren.5.a:0 "点火！"
+ xinren.6.t:0 "东突厥斯坦人民大会成立！"
+ xinren.6.d:0 "突厥斯坦青年党左翼，东突厥斯坦革命党，穆斯林总工会与乌鲁木齐城中的汉族左翼知识分子组成的新疆共产主义者同盟社经过协商合并组成了东突厥斯坦民主革命党。\n\n全疆各地各民族的代表纷纷收拾行囊，从各地赶赴乌鲁木齐参加东突厥斯坦人民大会的开幕仪式，随着大会的进行，最重要的一个议程：东突厥斯坦民主革命党中央委员会的选举开始了，不出所料的，东突厥斯坦未来的方向担负在民族军两位领导人身上：\n\n阿合买提江提出重新解构伊斯兰传统教义，利用其话语解释马克思主义的社会理论，从而拜托传统迷信和不良传统对革命造成的不良影响。\n\n阿巴索夫仍然坚持波利诺夫等俄国红军留下的政治遗产和预定路线，坚持构建一个政教分离的世俗苏维埃民族共和国。\n\n紧张的统计环节终于结束，人们终于松了一口气。"
+ xinren.6.a:0 "传来讯息：自由雄鹰的长啸响彻天山！"
+ xinren.6.b:0 "有人喊叫：这就是你们努力的乐园！"
