给我升起来

--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -566,6 +566,16 @@
  ETS_hotan_emirate_DEF: "和阗埃米尔国"
 
 #红月亮
+ ETS_RED: "东突厥斯坦苏维埃共和国"
+ ETS_RED_ADJ: "东突厥斯坦"
+ ETS_RED_DEF: "东突厥斯坦苏维埃共和国"
+ ETS_RED_totalist: "东突厥斯坦苏维埃共和国"
+ ETS_RED_totalist_ADJ: "东突厥斯坦"
+ ETS_RED_totalist_DEF: "东突厥斯坦苏维埃共和国"
+ ETS_RED_radical_socialist: "东突厥斯坦苏维埃共和国"
+ ETS_RED_radical_socialist_ADJ: "东突厥斯坦"
+ ETS_RED_radical_socialist_DEF: "东突厥斯坦苏维埃共和国"
+
  SIK_Abdukirim_Abbasof: "阿不都克里木·阿巴索夫"
  POLITICS_Abdukirim_Abbasof_DESC:0 "阿巴索夫，作为在旧迪化城当中受过教育的知识分子，一贯深受莫斯莫里夫和波利诺夫的信任。当民族军被新疆军阀团团包围，陷入绝境时，他带着一部分部队向北突围，最终攻破了哈密国的防线，遁入了比北疆更加混乱的西蒙古。在此处，阿巴索夫接触了蒙古人民党，人民革命军和俄国红军的同志们，接受了正统的马克思主义教育。当新疆内战爆发时，他第一时间越过了阿尔泰的雪山，和阿合买提江留在新疆的各路游击队混合，加入了轰轰烈烈的民族独立战争当中。在他当选东突厥斯坦民主革命党主席后，新疆的未来已经明了，弱肉强食的荒漠中，平等和尊严再也不是笑话。"
  SIK_Ehmetjan_Qasimi: "阿合买提江·哈斯木"
@@ -573,12 +583,23 @@
  SIK_Saifuddin_Azizi: "赛福鼎·艾则孜"
  SIK_Asgat_Iskhakov: "艾斯海提·伊斯哈科夫"
  SIK_Dalelkhan_Sugirbayev: "达列力汗·苏古尔巴也夫"
+ SIK_Isakbek_Mononov: "伊斯哈克伯克·穆努诺夫"
+ SIK_Muhemmet: "买买提伊敏·伊敏诺夫"
 
  ETS_our_father: "§Y和蔼的父§!"
  ETS_our_leader: "§Y仁慈的主§!"
+ EST_must_return: "§R民主革命党将尽力弥补东突厥斯坦独立运动对他民族同胞的野蛮行径。§!"
 
  ETS_tian_shan_de_ying:0 "天山雄鹰"
  ETS_xin_yang_de_rong_yao:0 "“信仰的荣誉”“§RSalah ad-Din”§!"
+
+ ETS_bu_chang_zheng_ce:0 "民族仇杀补偿标准"
+ ETS_min_zu_dai_biao:0 "民族代表法案"
+ ETS_min_zu_dai_biao_da_hui:0 "民族代表大会"
+ ETS_xin_ping_jiu_jiu:0 "新瓶装旧酒"
+ ETS_military_buff_idea_3:0 "东突厥斯坦解放军"
+ ETS_military_buff_idea_4:0 "东突厥斯坦红军军"
+ ETS_xian_feng_dang:0 "各民族的先锋队"
 
  ETS_red_totalist_party:0 "东突厥斯坦民族军"
  ETS_red_totalist_party_long:0 "东突厥斯坦民族军\n§g杨增新在北疆的苛捐杂税，自清朝以来混乱不堪，你中有我，我中有你的民族局势，以及最重要的一点：十月革命在北方轰轰烈烈的进行与失败，造就了这一支民族性仇恨交其他势力寡淡，其自身带有明确社会主义思潮指导的非正规民兵武装。民族军的势力如同滚雪球一般在准噶尔盆地发展，很可惜，其领袖莫斯莫里夫的军事行动葬送了民族军的前程，他和总指挥均被军阀武装击毙，数年的发展从此功亏一篑，在新疆内战时，其余党从村庄和蒙古边境从新集结，响应了泛突厥大会的起义。很明显，虽然其如今在北疆根深蒂固，但泛突厥大会一是组织完整，二是力量强大，三是有土耳其人在后撑腰，想必不用担心这一支方才重出江湖的武装掌控政局。§!"
@@ -591,12 +612,30 @@
  ETS_guang_zi_bei_lai_desc:0 "民族军的马蹄抓住青年党内乱之机，如狂潮一般翻越天山而下。六城之地数千年的混战和仇杀应当在此时终结。我们将用红色的血，洗净白色暴君给新疆各族人民造成的伤口..."
  ETS_hong_se_yi_li:0 "红色伊犁河"
  ETS_hong_se_yi_li_desc:0 "但凡是有点规模的封建地主集团几乎都在自发的红色恐怖中被屠戮一空，党组织花了好大的力气才将失控的游击队和民兵重新聚拢，急令乌斯满和他的部队回到阿勒泰地区接受组织审查。新疆已经混乱了太久，人民正在渴求和平和秩序到来，仇杀和冲突是时候停止了，不过在这之前，路线问题仍需解决。"
+ ETS_jian_tao_cuo_wu:0 "检讨错误"
+ ETS_jian_tao_cuo_wu_desc:0 "“东突厥斯坦革命运动初期曾把全体汉族人民同国民党强盗等同起来，把全体汉族人民同撮腐败的汉族贪官污吏、匪兵和警察混淆起来，而认为所有的汉族人都是敌人，结果，我们便不分青红皂白、不分敌我地打击和枪杀了自己的朋友；而比任何反动官吏还要凶恶得多的那些本民族的死敌——民族败类，却受到了我们的保护...这是一个完全错误的、不正确的政策。”——阿不都克里木·阿巴索夫"
+ ETS_fan_yao_nan:0 "樊耀南的残军"
+ ETS_fan_yao_nan_desc:0 "新疆内战结束后，汉人军阀带着残兵败将和金银珠宝狼狈的流窜到马家境内，与他们不同，樊耀南的部分残部率亲兵驻留当地，以保护汉人为己任，甚至显露出一定程度的三民主义倾向。麦斯武德政变未遂导致的混乱局面使得此地幸运的留存至今，既然平等的民族政府已经建成，我们是时候派人去进行合并协商，共图大业了。"
+ ETS_wu_fei_qi_zong:0 "吾并非其众"
+ ETS_wu_fei_qi_zong_desc:0 "通过一系列的彻底改革，民主革命党可以自豪的向共产国际递上我们的答卷：东突厥斯坦或是新疆已经成为世界每个左翼势力对民族关系处理，保卫民族团结意识和实施民族自治的满分答卷，我们的完全胜利向三山之间，两河之中，一墙之内的普罗大众证明了一件事：§R我们§!和§B他们§!不同！"
 
  ETS_he_ai_de_fu:0 "和蔼的父"
  ETS_he_ai_de_fu_desc:0 "阿不都克里木·阿巴索夫向来是民族军总指挥波利诺夫最受信任的副手。他是十月革命辐射到新疆的具体体现，他已经下定了决心，势必要在新疆重燃十月革命的烽火。"
+ ETS_dang_ling_dao_yi_qie:0 "党领导一切"
+ ETS_dang_ling_dao_yi_qie_desc:0 "伟大的十月革命已经证明了先锋队理论的完全正确了，其无愧于史上第一个进行实践的社会主义民主形式之称呼。遗憾的是，该制度随着白军的反攻而宣告失败，但是如今，中亚的先锋队实践将再次证明真理之无可辩驳。"
+ ETS_tu_di_gai_ge:0 "启动土地改革"
+ ETS_tu_di_gai_ge_desc:0 "新疆的工业实力不能说是微乎其微，只能说是根本没有。在短时间内改善绝对难以想象，更何况北方的白军威胁和马家军正对新疆虎视眈眈。因此，我们需要立即启动农村土地产权的急速改革，为新疆工业发展铺路。"
+ ETS_cun_jie_zhi_jun:0 "纯洁之军"
+ ETS_cun_jie_zhi_jun_desc:0 "随着政治委员与意识形态教育在各路武装当中的普及，我们的红军已经和十月革命的战士们一样充满信仰，他们绝对是民主革命党的利剑，全疆全党各族人民都对他们充满希望：听党指挥，能打胜仗。"
 
  ETS_ren_ci_de_zhu:0 "仁慈的主"
  ETS_ren_ci_de_zhu_desc:0 "阿合买提江・哈斯木，在伊犁玻璃厂破产后回乡，他在破落的绿洲中目睹了无数以圣战为名的起义，这让他发现了蕴藏在古经中的巨大伟力——结社的组织力，虔诚的动员力，以及深深种在人民心中的对地上天国的期盼...正因如此，请你相信地上天国终将实现。"
+ ETS_xin_jiao_yi:0 "教义再诠释"
+ ETS_xin_jiao_yi_desc:0 "信士们啊！你们当要深思真主的创造，不要困窘在旧经书之中而迷失其意，因为真主的智慧乃是至高至大，真主爱哪些与时俱进其奥秘，并将其智慧化为善行之人。\n\n你将为他的公正和自由奋斗，因为这是主赐予世界的真理。阶级之间之斗争，乃是至高至善之圣战，请谨记主的真言：谁帮助他人，真主必援助他；谁作恶，真主必将审判他。"
+ ETS_zhong_jiao_ji_gou:0 "重塑宗教机构"
+ ETS_zhong_jiao_ji_gou_desc:0 "民主革命党决定就地对本土的宗教基层机构进行社会主义的改造，当地的宗教法庭，瓦合甫，苏菲教团和马德拉萨，无一例外在革命原则指导下进行了相对应的重塑，原本完善的当地自治体系很快焕然一新，成为了先锋队动员和宣传的工具。"
+ ETS_xin_yue_zhi_jun:0 "星月之军"
+ ETS_xin_yue_zhi_jun_desc:0 "“为真主的道而战斗的人是正义的。你们应当为受压迫的信士们伸张正义，帮助他们获得自由。战斗是为了驱逐那些不信真主，不允许信士自由践行信仰的人。”"
 
  xinren.1.t:0 "击毙赤匪首领！"
  xinren.1.d:0 "一直在准噶尔地区活跃的红俄匪帮首领莫斯莫里夫近日在和布克塞尔劫掠时被当地民团俘获后施以私刑处死，其人所领导的“东突厥斯坦民族军”向来在伊犁，塔城，阿山一带兴风作浪，猖獗至极。\n\n其副手伊万·波利诺夫随后带数千部队大规模袭扰我境内，以图报复匪首莫斯莫里夫之死，其兵锋一度曾触迪化城下，所幸我军与哈密军齐心协力，将其全歼于逃窜路上，其继任者阿合买提江与阿巴索夫分兵逃窜，难成大气。"
@@ -617,3 +656,6 @@
  xinren.6.d:0 "突厥斯坦青年党左翼，东突厥斯坦革命党，穆斯林总工会与乌鲁木齐城中的汉族左翼知识分子组成的新疆共产主义者同盟社经过协商合并组成了东突厥斯坦民主革命党。\n\n全疆各地各民族的代表纷纷收拾行囊，从各地赶赴乌鲁木齐参加东突厥斯坦人民大会的开幕仪式，随着大会的进行，最重要的一个议程：东突厥斯坦民主革命党中央委员会的选举开始了，不出所料的，东突厥斯坦未来的方向担负在民族军两位领导人身上：\n\n阿合买提江提出重新解构伊斯兰传统教义，利用其话语解释马克思主义的社会理论，从而拜托传统迷信和不良传统对革命造成的不良影响。\n\n阿巴索夫仍然坚持波利诺夫等俄国红军留下的政治遗产和预定路线，坚持构建一个政教分离的世俗苏维埃民族共和国。\n\n紧张的统计环节终于结束，人们终于松了一口气。"
  xinren.6.a:0 "传来讯息：自由雄鹰的长啸响彻天山！"
  xinren.6.b:0 "有人喊叫：这就是你们努力的乐园！"
+ xinren.7.t:0 "仁慈之君"
+ xinren.7.d:0 "一位老妇蹲在街角，用土灶烧着热腾腾的馕饼，阵阵麦香混合着炭火的烟味飘荡开来，吸引了一群瘦弱的孩子围拢上前。老妇一边用粗糙的手翻动着馕饼，一边叮嘱孩子们不要推搡，樊耀南颁布的命令让她能安心卖馕，哪怕物资匮乏，她也愿意为饥饿的孩子分上一口。\n\n街边的树木被战火烧成了光秃秃的黑影，却有几名士兵在树下分发粮食——这是樊耀南的军队提供的补给。粮袋里是粗糙的面粉和干硬的咸菜，但人们的眼神中透着一种满足，仿佛这些微薄的救助已是难得的恩赐。士兵们衣衫破旧，手上的枪械看起来同样残缺，但他们分发物资时，眼中却没有轻蔑，而是一种与百姓共患难的平静。\n\n赛福鼎和民族军的战士们在凌晨时分来到此处，说实在话，喀什和乌鲁木齐的情况其实并不比这好到哪去，随着战马头部的甩动，赛福鼎从脑海中被拉了出来。樊耀南穿着褪色的长袍马褂，正在不远处等着，组织对这次的谈判何其充满信心，甚至急促的连场地都没安排。和正常的谈判一样，之后的事情一切照常。\n\n......\n\n“所有的难民都能回到自己的土地上，女人，孩子还有老人，士兵，旧官吏甚至被担保无罪的地主...都能毫无制度性阻碍的加入当地的合作社，分到属于自己的土地...我对主发誓”\n“何以见得”樊耀南明显对于如此友善的承诺显出怀疑，毕竟青年党人和初来南疆的民族军所犯下的...错误有目共睹。\n“汉人代表不是已经能进入我们的民族代表大会了？每个区域都有按比例计算的...”\n“维吾尔族同样能进入杨增新的政府。”樊耀南的驳斥让赛福鼎不由得一怔，过了几秒，赛福鼎才回应到：\n“我们不是那些人...”"
+ xinren.7.a:0 "我们是布尔什维克...布尔什维克"
