伊犁河的水是什么颜色的？

--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -649,7 +649,7 @@
  xinren.4.t:0 "民族军入城！"
  xinren.4.d:0 "虽然阿勒甫金选择在内战当中支持麦斯武德，但弱小的联盟仍然难以抵抗铁木尔在军队中的绝对统治。迪化被铁木尔派完全占领的消息传来，走投无路的麦斯武德思前想后，最后以泛突厥大会的名义向伊宁城拍去了电报...\n\n早就已经出发的革命党人大喜过望，北方的红色浪潮打了精疲力竭的铁木尔派一个措手不及。民族军很快接连占领了天山的每一座城市，那些中立的势力纷纷望风而投降。出乎所有人意料的，东突厥斯坦革命党——这一内战的边缘势力带着十月革命的遗产统治了新疆。"
  xinren.4.a:0 "和这帮虫豸在一起，怎么能治理好新疆呢！"
- xinren.5.t:0 "击毙赤匪首领！"
+ xinren.5.t:0 "伊犁河的水是什么颜色的？"
  xinren.5.d:0 "南疆的地主阿訇们打错算盘了，他们天真的以为民族军的战士们会为他们做马前卒，打倒了大暴君铁木尔的余孽后毕恭毕敬的把奶与蜜交给他们，自己又可以让他们舒舒服服的回到以前的生活，让他们再一次骑在牧民头上当巴依老爷。\n\n不，这再也不会发生了，给主的子民带来痛苦的国王，伯克，喀孜，巴依或者乡长，凡是腐朽的事物，凡是利己和自私，都将被不留余地的清算。\n\n“老子杀的就是你统治贵族！杀掉他几十万的贵族，杀光！”率先进入南疆的乌斯满骑着高大的骏马，其命令宛如雷电，愤怒的农民从四周将他簇拥，颂着经中的内容。\n\n“火狱是他们的床，也是他们的被，我要这样报酬不义之人。”\n\n“受压迫而被战斗者，已获准还击，因为他们确是受了委屈。”"
  xinren.5.a:0 "点火！"
  xinren.6.t:0 "东突厥斯坦人民大会成立！"
