--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -576,6 +576,10 @@
  ETS_RED_radical_socialist_ADJ: "东突厥斯坦"
  ETS_RED_radical_socialist_DEF: "东突厥斯坦苏维埃共和国"
 
+ ETS_ALO: "乌斯满军区"
+ ETS_ALO_ADJ: "乌斯满军区"
+ ETS_ALO_DEF: "乌斯满军区"
+
  SIK_Abdukirim_Abbasof: "阿不都克里木·阿巴索夫"
  POLITICS_Abdukirim_Abbasof_DESC:0 "阿巴索夫，作为在旧迪化城当中受过教育的知识分子，一贯深受莫斯莫里夫和波利诺夫的信任。当民族军被新疆军阀团团包围，陷入绝境时，他带着一部分部队向北突围，最终攻破了哈密国的防线，遁入了比北疆更加混乱的西蒙古。在此处，阿巴索夫接触了蒙古人民党，人民革命军和俄国红军的同志们，接受了正统的马克思主义教育。当新疆内战爆发时，他第一时间越过了阿尔泰的雪山，和阿合买提江留在新疆的各路游击队混合，加入了轰轰烈烈的民族独立战争当中。在他当选东突厥斯坦民主革命党主席后，新疆的未来已经明了，弱肉强食的荒漠中，平等和尊严再也不是笑话。"
  SIK_Ehmetjan_Qasimi: "阿合买提江·哈斯木"
@@ -605,6 +609,7 @@
 
  ETS_tian_shan_de_ying:0 "天山雄鹰"
  ETS_xin_yang_de_rong_yao:0 "“信仰的荣誉”“§RSalah ad-Din”§!"
+ ETS_hong_se_tie_mu_er:0 "红色帖木儿"
 
  ETS_Central_east_war:0 "大西亚战争"
  ETS_Central_east_war_desc:0 "原本被世人视作落后，愚昧的代表而向来被理所应当的认为是俄罗斯或者哪个地区强权的中亚各部族如今在我们的带领下重新站上了世界舞台，世人终于记起了这片诞生过贵霜、塞尔柱、花剌子模和帖木儿帝国的沃土。北方的帝国主义重新将目光看向了中亚的戈壁和绿洲，自认为理所应当的可以从骄傲的游牧民手中要回他们吐出来的东西。他们错了：§R真理§!已来临，虚妄已消逝了————虚妄确是将消逝的...\n\n西亚诸国：\n\n§Y阿拉木图[ALO.GetFlag]§! [ALO_get_has_or_no] \n\n§Y浩罕[KYR.GetFlag]§![KYR_get_has_or_no] \n\n§Y布哈拉[TRK.GetFlag]§![TRK_get_has_or_no] \n\n§Y希瓦[UZB.GetFlag]§![UZB_get_has_or_no]\n"
@@ -619,6 +624,8 @@
  ETS_military_buff_idea_4:0 "东突厥斯坦红军军"
  ETS_xian_feng_dang:0 "各民族的先锋队"
 
+ ETS_ALO_totalist_party_one:0 "东突厥斯坦民主党（哈萨克游击队）"
+ ETS_red_totalist_party_long:0 "东突厥斯坦民主党（哈萨克游击队）"
  ETS_red_totalist_party:0 "东突厥斯坦民族军"
  ETS_red_totalist_party_long:0 "东突厥斯坦民族军\n§g杨增新在北疆的苛捐杂税，自清朝以来混乱不堪，你中有我，我中有你的民族局势，以及最重要的一点：十月革命在北方轰轰烈烈的进行与失败，造就了这一支民族性仇恨交其他势力寡淡，其自身带有明确社会主义思潮指导的非正规民兵武装。民族军的势力如同滚雪球一般在准噶尔盆地发展，很可惜，其领袖莫斯莫里夫的军事行动葬送了民族军的前程，他和总指挥均被军阀武装击毙，数年的发展从此功亏一篑，在新疆内战时，其余党从村庄和蒙古边境从新集结，响应了泛突厥大会的起义。很明显，虽然其如今在北疆根深蒂固，但泛突厥大会一是组织完整，二是力量强大，三是有土耳其人在后撑腰，想必不用担心这一支方才重出江湖的武装掌控政局。§!"
  ETS_red_totalist_party_one:0 "东突厥斯坦民主革命党"
@@ -659,6 +666,10 @@
  ETS_liang_he_zhi_jian_desc:0 "东突厥斯坦如今已经成为各民族的家园，但举目望去，我们的同胞不但还陷于反动派的泥泞，从黑色星期五危机中的俄罗斯帝国又对着他们的“故土”虎视眈眈。民主革命党可能是他们唯一的希望。经过了内战后的重整，我军已经做好了解放自己的同胞兄弟，迎接一切强敌困难的准备。"
  ETS_yi_jia_ren:0 "一家人吃同一盘饭"
  ETS_yi_jia_ren_desc:0 "在很久以前，西域民族和蒙古人就一起在一起生活，一起保护风吹草低见牛羊的大草原。在数十年前，蒙人党和民族军就在一起抗击封建统治者的残酷压迫，我们现今不但愈发强大，甚至都回到了自己的故乡...那就让我们再次联合起来，一起保卫来之不易的革命果实！"
+ ETS_wu_si_man:0 "乌斯满听令！"
+ ETS_wu_si_man_desc:0 "差不多得了撒欸！是时候让那些玷污哈萨克大草原的反动派把他们的钩子乖乖闭紧咯！"
+ ETS_ma_bei_shang_de:0 "马背上的盟友"
+ ETS_ma_bei_shang_de_desc:0 "哈萨克的红军也回到了他们的故乡！快快给朋友斟满美酒，递上烤馕！当然，他们是对抗俄罗斯帝国主义侵略的第一线，同时也是俄罗斯侵略军的首要目标，我们将把主要的军事力量部署在哈萨克大草原上，以保护满腔热忱和我们站在一起的同志们。"
  ETS_fang_fan_xiong_zhua:0 "防范熊爪！"
  ETS_fang_fan_xiong_zhua_desc:0 "巨熊的威胁已经高悬在我们头上许久，我们将一定要把主要精力放在迎接这个达摩克里斯之剑上。"
  
