跟随老大哥

--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -579,6 +579,9 @@
  ETS_ALO: "乌斯满军区"
  ETS_ALO_ADJ: "乌斯满军区"
  ETS_ALO_DEF: "乌斯满军区"
+ ETS_KYR: "突厥斯坦军事管辖区"
+ ETS_KYR_ADJ: "突厥斯坦军事管辖区"
+ ETS_KYR_DEF: "突厥斯坦军事管辖区"
 
  SIK_Abdukirim_Abbasof: "阿不都克里木·阿巴索夫"
  POLITICS_Abdukirim_Abbasof_DESC:0 "阿巴索夫，作为在旧迪化城当中受过教育的知识分子，一贯深受莫斯莫里夫和波利诺夫的信任。当民族军被新疆军阀团团包围，陷入绝境时，他带着一部分部队向北突围，最终攻破了哈密国的防线，遁入了比北疆更加混乱的西蒙古。在此处，阿巴索夫接触了蒙古人民党，人民革命军和俄国红军的同志们，接受了正统的马克思主义教育。当新疆内战爆发时，他第一时间越过了阿尔泰的雪山，和阿合买提江留在新疆的各路游击队混合，加入了轰轰烈烈的民族独立战争当中。在他当选东突厥斯坦民主革命党主席后，新疆的未来已经明了，弱肉强食的荒漠中，平等和尊严再也不是笑话。"
@@ -611,9 +614,10 @@
  ETS_xin_yang_de_rong_yao:0 "“信仰的荣誉”“§RSalah ad-Din”§!"
  ETS_hong_se_tie_mu_er:0 "红色帖木儿"
 
- ETS_Central_east_war:0 "大西亚战争"
- ETS_Central_east_war_desc:0 "原本被世人视作落后，愚昧的代表而向来被理所应当的认为是俄罗斯或者哪个地区强权的中亚各部族如今在我们的带领下重新站上了世界舞台，世人终于记起了这片诞生过贵霜、塞尔柱、花剌子模和帖木儿帝国的沃土。北方的帝国主义重新将目光看向了中亚的戈壁和绿洲，自认为理所应当的可以从骄傲的游牧民手中要回他们吐出来的东西。他们错了：§R真理§!已来临，虚妄已消逝了————虚妄确是将消逝的...\n\n西亚诸国：\n\n§Y阿拉木图[ALO.GetFlag]§! [ALO_get_has_or_no] \n\n§Y浩罕[KYR.GetFlag]§![KYR_get_has_or_no] \n\n§Y布哈拉[TRK.GetFlag]§![TRK_get_has_or_no] \n\n§Y希瓦[UZB.GetFlag]§![UZB_get_has_or_no]\n"
+ ETS_Central_east_war_cat:0 "大西亚战争"
+ ETS_Central_east_war_cat_desc:0 "原本被世人视作落后，愚昧的代表而向来被理所应当的认为是俄罗斯或者哪个地区强权的中亚各部族如今在我们的带领下重新站上了世界舞台，世人终于记起了这片诞生过贵霜、塞尔柱、花剌子模和帖木儿帝国的沃土。北方的帝国主义重新将目光看向了中亚的戈壁和绿洲，自认为理所应当的可以从骄傲的游牧民手中要回他们吐出来的东西。他们错了：§R真理§!已来临，虚妄已消逝了————虚妄确是将消逝的...\n\n西亚诸国：\n\n§Y阿拉木图[ALO.GetFlag]§! [ALO_get_has_or_no] \n\n§Y浩罕[KYR.GetFlag]§![KYR_get_has_or_no] \n\n§Y布哈拉[TRK.GetFlag]§![TRK_get_has_or_no] \n\n§Y希瓦[UZB.GetFlag]§![UZB_get_has_or_no]\n"
  ETS_zhun_bei_zhaqn_zheng:0 "主动出击！"
+ ETS_bulid_tu_jue_si_tan:0 "建立突厥斯坦军事管辖区"
  ETS_war_timer:0 "战争！"
 
  ETS_bu_chang_zheng_ce:0 "民族仇杀补偿标准"
@@ -623,9 +627,12 @@
  ETS_military_buff_idea_3:0 "东突厥斯坦解放军"
  ETS_military_buff_idea_4:0 "东突厥斯坦红军军"
  ETS_xian_feng_dang:0 "各民族的先锋队"
+ ETS_di_kang_dao_di:0 "抵抗到底"
+ ETS_tu_jue_si_tan_zai_tong_yi:0 "突厥斯坦再统一"
+ ETS_tu_jue_si_tan_tong_yi:0 "突厥斯坦统一"
 
  ETS_ALO_totalist_party_one:0 "东突厥斯坦民主党（哈萨克游击队）"
- ETS_red_totalist_party_long:0 "东突厥斯坦民主党（哈萨克游击队）"
+ ETS_ALO_totalist_party_one_long:0 "东突厥斯坦民主党（哈萨克游击队）"
  ETS_red_totalist_party:0 "东突厥斯坦民族军"
  ETS_red_totalist_party_long:0 "东突厥斯坦民族军\n§g杨增新在北疆的苛捐杂税，自清朝以来混乱不堪，你中有我，我中有你的民族局势，以及最重要的一点：十月革命在北方轰轰烈烈的进行与失败，造就了这一支民族性仇恨交其他势力寡淡，其自身带有明确社会主义思潮指导的非正规民兵武装。民族军的势力如同滚雪球一般在准噶尔盆地发展，很可惜，其领袖莫斯莫里夫的军事行动葬送了民族军的前程，他和总指挥均被军阀武装击毙，数年的发展从此功亏一篑，在新疆内战时，其余党从村庄和蒙古边境从新集结，响应了泛突厥大会的起义。很明显，虽然其如今在北疆根深蒂固，但泛突厥大会一是组织完整，二是力量强大，三是有土耳其人在后撑腰，想必不用担心这一支方才重出江湖的武装掌控政局。§!"
  ETS_red_totalist_party_one:0 "东突厥斯坦民主革命党"
@@ -670,6 +677,22 @@
  ETS_wu_si_man_desc:0 "差不多得了撒欸！是时候让那些玷污哈萨克大草原的反动派把他们的钩子乖乖闭紧咯！"
  ETS_ma_bei_shang_de:0 "马背上的盟友"
  ETS_ma_bei_shang_de_desc:0 "哈萨克的红军也回到了他们的故乡！快快给朋友斟满美酒，递上烤馕！当然，他们是对抗俄罗斯帝国主义侵略的第一线，同时也是俄罗斯侵略军的首要目标，我们将把主要的军事力量部署在哈萨克大草原上，以保护满腔热忱和我们站在一起的同志们。"
+ ETS_xin_si_lu:0 "新丝路"
+ ETS_xin_si_lu_desc:0 "丝绸之路在数千年的历史风沙中成为了这片荒凉戈壁的名片，但历史也同样证明，没有强大的军事力量保护，再繁荣的商路也会毁于一旦，鉴于战事将近，我们将以最快的速度调集所有资源，将中亚的俄国铁路和新疆的中国铁路网络接通，以便我军在第一时间到达前线支援。"
+ ETS_you_ji_zhun_bei:0 "做好游击准备"
+ ETS_you_ji_zhun_bei_desc:0 "俄军兵锋一旦南下，其排山倒海之势决非我等能够抵挡。传统堑壕拉锯的防御方式正中白军下怀，没人会怀疑他们在第一次世界大战中出色的表现，而东突厥斯坦孱弱的军事实力又怎么能与同盟国相提并论？我们需要做好化整为零，小股袭扰，战斗到最后的准备。"
+ ETS_bian_jing_fang_xian:0 "阿拉木图边境防线"
+ ETS_bian_jing_fang_xian_desc:0 "阿拉木图是我们与俄军交战的第一阵线，北方之地的熊爪无需伸手便可触及，此地不但承载哈萨克人为数不多的工业力量，而且还作为哈萨克人的政治中心存在，此城一丢，防线便难以为继。坏消息是，此地无限可守，一览无遗...我们必须早做准备，用血肉守住每一块泥沙！"
+ ETS_tu_jue_yi_jia_qin:0 "突厥一家亲："
+ ETS_tu_jue_yi_jia_qin_desc:0 "在革命胜利后，东突厥斯坦的革命者举目西望，惊喜的发现，在突厥人的故乡，红色的解放者再一次举起了他们的旗帜...再努力一把，“突厥斯坦”就要迎来解放。"
+ ETS_fen_sui_bai_lei:0 "粉碎民族败类"
+ ETS_fen_sui_bai_lei_desc:0 "突厥斯坦的同胞现在正在被旧社会的余毒压迫，我们绝对不能眼睁睁的看着他们在地狱中受煎熬！"
+ ETS_shan_qu_bao_lei:0 "山地堡垒群"
+ ETS_shan_qu_bao_lei_desc:0 "我们需要在很可能到来的北方侵略战争中做最悲观的准备，如果哈萨克一望无际的大草原被突破，那么我们只剩下最后一道防线...还好，这最后一道防线山川沟壑，绝非常人能够轻易逾越，我们若是能将工事修筑于此，那么此地便是一夫当关万夫莫开。"
+ ETS_kuo_da_jun_qu_he_zuo:0 "扩大军区合作"
+ ETS_kuo_da_jun_qu_he_zuo_desc:0 "突厥斯坦虽然已经统一，但前政权留下的败类仍然在他处作祟。为了处理这些流毒余孽，我们将扩大对突厥斯坦军区的援助，直到我们之间的统一能够顺利接轨为止。"
+ ETS_sha_mo_cheng_shi:0 "沙漠城市"
+ ETS_sha_mo_cheng_shi_desc:0 "突厥斯坦的革命政府和我们一样，都处于内战刚刚结束，民生百废待兴的状态，我们很高兴帮助他们恢复内战的创伤，手拉手建立起属于革命者的不朽堡垒。"
  ETS_fang_fan_xiong_zhua:0 "防范熊爪！"
  ETS_fang_fan_xiong_zhua_desc:0 "巨熊的威胁已经高悬在我们头上许久，我们将一定要把主要精力放在迎接这个达摩克里斯之剑上。"
  
