--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -735,7 +735,7 @@
  hnnelection.8.d:0 "赵恒惕的联盟以压倒性优势拿下了选举。毫不意外地，他在自己的就职感谢中提到，他要在这个山雨欲来的时代中确保湖南的安全，并竭尽全力捍卫、强化新生的民主，同时也感谢这个选举季支持过自己的所有人，还承诺会无论背景，保证全体湖南公民的自由平等。"
  hnnelection.8.a:0 "为湖南和民主满饮此杯！"
  hnnelection.9.t:0 "民主授权！"
- hnnelection.9.d:0 "赵恒惕的联盟以压倒性优势拿下了选举。毫不意外地，他在自己的就职感谢中提到，他要在这个山雨欲来的时代中确保湖南的安全，并竭尽全力捍卫、强化新生的民主，同时也感谢这个选举季支持过自己的所有人，还承诺会无论背景，保证全体湖南公民的自由平等。"
+ hnnelection.9.d:0 "陈渠珍以压倒性优势拿下了选举。毫不意外地，他在自己的就职感谢中提到，他要在这个山雨欲来的时代中确保湖南的安全，并竭尽全力捍卫、强化新生的民主，同时也感谢这个选举季支持过自己的所有人，还承诺会无论背景，保证全体湖南公民的自由平等。"
  hnnelection.9.a:0 "为湖南和民主满饮此杯！"
  hnnelection.10.t:0 "谭延闿赢得湖南选举"
  hnnelection.10.d:0 "在刚刚出炉的湖南省长选举结果中，谭延闿成功获得了压倒性的胜利。我们的老朋友赵恒惕再一次与省长职位失之交臂。尽管谭延闿是民选省长，但是人人都知道他背后的人是汤芗铭，没有人能够确保汤芗铭到底会在什么时候将宪法一脚踹开。我们只能希望谭延闿能够守住自己的初心，维护湖南来之不易的民主。"
