--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -1199,6 +1199,9 @@
  sqiwan.27.t:0 "段祺瑞的十年"
  sqiwan.27.d:0 "1926年段祺瑞下野之后边和其他皖系旧人一样窝居天津，期间德国人认为他的影响力犹存，还有一定的价值想要让他再入政坛与吴佩孚抗衡。而吴佩孚也认为段祺瑞虽然下野了，但是余威犹存，担心他还在暗中积蓄力量，见到德国人有意请他出山，更对他充满了敌意。多次派人暗示他北方气候不好，自己愿意出一笔钱让他前往南方修养。段祺瑞不堪其扰，最终在1933年，在侄子段宏纲、小舅吴光新和旧部魏宗翰的陪同下一路南行，此后便留在上海居住直到如今。自从下野以来，段祺瑞就像是失去了精气神，整日萎靡不振，加之戎马一生，饮食极不健康，长期患有胃病。下野后更是只吃素饭，肉食、滋补物一点不用，还喜好抽烟。1934年春末，胃病转溃疡引发大出血，而他年岁已高不便动手术，如不是家人多次输血，险些去世。中西医诊后都劝他开荤，增加营养，段祺瑞起初坚决不接受，说人可死荤不可开。直到山东的靳云鹗听说段帅大病一事，传来密信，段祺瑞阅读后大笑一场，当晚便开了荤，身体这才有了好转，虽说仍旧小病不断，但此后未曾听闻有过重病不起的时候。"
  sqiwan.27.a:0 "信里到底写了什么？"
+ sqiwan.28.t:0 "戴笠输诚"
+ sqiwan.28.d:0 "紫金山南麓，一位古稀老人信步闲庭，身后的中年人不知该走该停，只得亦步亦趋跟在老人身后。而中年人的身后，年富力强的四名保镖也寸步不离。\n\n“段公，我们本是残兵败寇，本不该如此无耻来向您乞怜，可如今东南方定，根基未稳，人民才遭兵祸，东方倭寇、南方联省、西方马匪、北方伪帝又虎视眈眈，眼见一场大祸就在眼前，吾人如今再无称王称霸之野心，只求尽绵薄之力以保一方百姓平安，还请段公明鉴。”“照你的意思，离了你们国民党，我就定不了江山？”戴春风心中一惊，只得把头伸到更低处：“段公，鄙人绝无此意，只是如今山河破碎外敌环伺，我们避居山野也好，您将我们统统下狱也罢，这治国平天下的责任，我们却也是都无法实现了，如今我们既已兵败，只求尽心尽力，助您助国家一臂之力。”\n\n段祺瑞只是沉默，向前缓缓踱步，戴春风无奈，只得任由内心煎熬。粗布鞋停下，老人的声音传来：“你可知中山先生的遗骨，如今何在？”曾经的特务头子一愣，赶忙回答：“小人不知，恐是在战火中遗失了，每每想起此事，小人便心如刀割。”“武昌兵变，南北议和，我连上两电乞共和，尽心尽力，为的就是让人民免经战火，可结果如何呢？李中堂捍卫一生的大清亡了，袁慰亭争了一辈子权，最终也毁在权字手里，小站练兵的战友，反目的反目，身亡的身亡。日后我从不言和平统一，只谈武力一统，你可知为何？”“小人不知，还望段公明示。”\n\n戴春风并未抬头，但仍能感觉老人的目光紧紧盯住自己，他不知道自己是在流汗还是流泪，亦不知这是虚幻还是现实。“你觉得这地方怎么样？”目光转向，戴春风却仍低着头，望着地，“在这里建一个共和陵吧，没有骸骨的就建衣冠冢，把武昌以来拥戴共和尚未下葬的诸位英才都葬在这，身前打得火热，身后总是能坐下来喝喝茶的。我是个军人，只懂行伍操典，行军指挥之事。我也是个老人，不想再造杀业。神州虽大，死的人也够多了。”\n\n“叫汪兆铭收拾妥当，下次亲自过来，既然你们有心，我也不拒绝。愿意跟我干的，我段祺瑞欢迎，不愿意的，我出遣散费大家各凭天命。修齐也好，治平也罢。我也想看看这共和，到底如何。”"
+ sqiwan.28.a:0 "“小人谨遵总统命令。”"
 
 #白俄
  SQI_SHA: "山东政府"
