君士坦丁堡

--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -618,6 +618,8 @@
  ETS_Central_east_war_cat_desc:0 "原本被世人视作落后，愚昧的代表而向来被理所应当的认为是俄罗斯或者哪个地区强权的中亚各部族如今在我们的带领下重新站上了世界舞台，世人终于记起了这片诞生过贵霜、塞尔柱、花剌子模和帖木儿帝国的沃土。北方的帝国主义重新将目光看向了中亚的戈壁和绿洲，自认为理所应当的可以从骄傲的游牧民手中要回他们吐出来的东西。他们错了：§R真理§!已来临，虚妄已消逝了————虚妄确是将消逝的...\n\n西亚诸国：\n\n§Y阿拉木图[ALO.GetFlag]§! [ALO_get_has_or_no] \n\n§Y浩罕[KYR.GetFlag]§![KYR_get_has_or_no] \n\n§Y布哈拉[TRK.GetFlag]§![TRK_get_has_or_no] \n\n§Y希瓦[UZB.GetFlag]§![UZB_get_has_or_no]\n"
  ETS_zhun_bei_zhaqn_zheng:0 "主动出击！"
  ETS_bulid_tu_jue_si_tan:0 "建立突厥斯坦军事管辖区"
+ ETS_qian_wang_ao_man:0 "前往伊斯坦布尔的使臣"
+ ETS_qian_wang_ao_man_desc:0 "敌人的敌人就是朋友，对于我们如今的大敌俄罗斯人而言，他们树敌众多，奥斯曼帝国的哈里发对于捅俄罗斯人一刀子一定很感兴趣。"
  ETS_war_timer:0 "战争！"
 
  ETS_bu_chang_zheng_ce:0 "民族仇杀补偿标准"
@@ -630,6 +632,8 @@
  ETS_di_kang_dao_di:0 "抵抗到底"
  ETS_tu_jue_si_tan_zai_tong_yi:0 "突厥斯坦再统一"
  ETS_tu_jue_si_tan_tong_yi:0 "突厥斯坦统一"
+ ETS_graveyard:0 "帝国坟场"
+ ETS_si_zhan_dao_di:0 "死战到底"
 
  ETS_ALO_totalist_party_one:0 "东突厥斯坦民主党（哈萨克游击队）"
  ETS_ALO_totalist_party_one_long:0 "东突厥斯坦民主党（哈萨克游击队）"
@@ -695,6 +699,20 @@
  ETS_sha_mo_cheng_shi_desc:0 "突厥斯坦的革命政府和我们一样，都处于内战刚刚结束，民生百废待兴的状态，我们很高兴帮助他们恢复内战的创伤，手拉手建立起属于革命者的不朽堡垒。"
  ETS_fang_fan_xiong_zhua:0 "防范熊爪！"
  ETS_fang_fan_xiong_zhua_desc:0 "巨熊的威胁已经高悬在我们头上许久，我们将一定要把主要精力放在迎接这个达摩克里斯之剑上。"
+ ETS_san_cheng_zheng:0 "一根针扎不穿三层布"
+ ETS_san_cheng_zheng_desc:0 "与俄国的战争不可避免，开战！！！"
+ ETS_wen_zhu_fang_xian:0 "稳住阵线！"
+ ETS_wen_zhu_fang_xian_desc:0 "俄罗斯大军的潮水已经被各民族团结的铜墙铁壁拦下，他们的锋芒已经是强弩之末，现如今，他们已经陷入了战争泥潭之中，再也不可能像开始的攻势那般有威胁。"
+ ETS_wan_gong_she_diao:0 "弯弓射雕"
+ ETS_wan_gong_she_diao_desc:0 "骑马射箭是中亚游牧民的传统，西方列强以一种可笑的眼光看人：他们的板甲骑士变成了飞机，而上帝之鞭的弓箭则和千年前毫无差别。让我们拿起由钢铁组成的弓箭，射落天上哀叫着的可憎蚊虫吧！"
+ ETS_ren_duo_li_liang_da:0 "人多如山敌胆寒"
+ ETS_ren_duo_li_liang_da_desc:0 "俄罗斯的政客总生活在一种可笑的幻想中，他们不了解生活在帝国狭缝之间的民族，甚至不了解他们自己。他们以为战争只是纸面上人员和武器的相互交换，缺忽视了人心与人民的伟力。"
+ ETS_rdi_guo_fen_chang:0 "帝国坟场扩建"
+ ETS_rdi_guo_fen_chang_desc:0 "世人皆称阿富汗为帝国坟场，殊不知又有多少帝国在中亚折戟沉沙？"
+ ETS_yang_si_tan_bai:0 "羊死毯白"
+ ETS_yang_si_tan_bai_desc:0 "如今我方大势已去，哈萨克斯坦几乎落入敌手，不过俄罗斯人也已经人困马乏...再发起最后一次冲锋...宁要站着死，绝不跪着活！"
+ ETS_jian_shou_fan_ji:0 "坚守反击"
+ ETS_jian_shou_fan_ji_desc:0 "局势渐渐明朗起来...我们的当务之急是保存当前战果，保持当今防线。"
  
  ETS_follow_leader:0 "跟随老大哥"
  ETS_follow_leader_desc:0 "令人意想不到的事情发生了，十月革命过去了二十年不到，居然又一次在俄国重燃，全国上下一片欢庆。现如今，东突厥斯坦各族人民已经处理好了内部事务，准备跟着十月党人的步伐重新登上世界革命的列车。"
@@ -721,3 +739,7 @@
  xinren.7.t:0 "仁慈之君"
  xinren.7.d:0 "一位老妇蹲在街角，用土灶烧着热腾腾的馕饼，阵阵麦香混合着炭火的烟味飘荡开来，吸引了一群瘦弱的孩子围拢上前。老妇一边用粗糙的手翻动着馕饼，一边叮嘱孩子们不要推搡，樊耀南颁布的命令让她能安心卖馕，哪怕物资匮乏，她也愿意为饥饿的孩子分上一口。\n\n街边的树木被战火烧成了光秃秃的黑影，却有几名士兵在树下分发粮食——这是樊耀南的军队提供的补给。粮袋里是粗糙的面粉和干硬的咸菜，但人们的眼神中透着一种满足，仿佛这些微薄的救助已是难得的恩赐。士兵们衣衫破旧，手上的枪械看起来同样残缺，但他们分发物资时，眼中却没有轻蔑，而是一种与百姓共患难的平静。\n\n赛福鼎和民族军的战士们在凌晨时分来到此处，说实在话，喀什和乌鲁木齐的情况其实并不比这好到哪去，随着战马头部的甩动，赛福鼎从脑海中被拉了出来。樊耀南穿着褪色的长袍马褂，正在不远处等着，组织对这次的谈判何其充满信心，甚至急促的连场地都没安排。和正常的谈判一样，之后的事情一切照常。\n\n......\n\n“所有的难民都能回到自己的土地上，女人，孩子还有老人，士兵，旧官吏甚至被担保无罪的地主...都能毫无制度性阻碍的加入当地的合作社，分到属于自己的土地...我对主发誓”\n“何以见得”樊耀南明显对于如此友善的承诺显出怀疑，毕竟青年党人和初来南疆的民族军所犯下的...错误有目共睹。\n“汉人代表不是已经能进入我们的民族代表大会了？每个区域都有按比例计算的...”\n“维吾尔族同样能进入杨增新的政府。”樊耀南的驳斥让赛福鼎不由得一怔，过了几秒，赛福鼎才回应到：\n“我们不是那些人...”"
  xinren.7.a:0 "我们是布尔什维克...布尔什维克"
+ xinren.8.t:0 "中亚的异动"
+ xinren.8.d:0 "我们的前仆从国似乎遭到了来自他邻居的教训，我们是否应该做出回应？"
+ xinren.8.a:0 "出击"
+ xinren.8.b:0 "视而不见"
