--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -620,6 +620,8 @@
  ETS_bulid_tu_jue_si_tan:0 "建立突厥斯坦军事管辖区"
  ETS_qian_wang_ao_man:0 "前往伊斯坦布尔的使臣"
  ETS_qian_wang_ao_man_desc:0 "敌人的敌人就是朋友，对于我们如今的大敌俄罗斯人而言，他们树敌众多，奥斯曼帝国的哈里发对于捅俄罗斯人一刀子一定很感兴趣。"
+ ETS_shi_yue_yu_huo:0 "十月的余火"
+ ETS_shi_yue_yu_huo_desc:0 "当我们在中亚独立抗战，艰难护家的时，如天降甘霖之前的闪电一般惊喜的事发生了。东亚的革命同志从硝烟中站起，解放东亚势在必得，而且如果我们挥兵一处，则兵锋无往不利。§R全世界无产者，联合起来！§!"
  ETS_war_timer:0 "战争！"
 
  ETS_bu_chang_zheng_ce:0 "民族仇杀补偿标准"
@@ -687,7 +689,7 @@
  ETS_you_ji_zhun_bei_desc:0 "俄军兵锋一旦南下，其排山倒海之势决非我等能够抵挡。传统堑壕拉锯的防御方式正中白军下怀，没人会怀疑他们在第一次世界大战中出色的表现，而东突厥斯坦孱弱的军事实力又怎么能与同盟国相提并论？我们需要做好化整为零，小股袭扰，战斗到最后的准备。"
  ETS_bian_jing_fang_xian:0 "阿拉木图边境防线"
  ETS_bian_jing_fang_xian_desc:0 "阿拉木图是我们与俄军交战的第一阵线，北方之地的熊爪无需伸手便可触及，此地不但承载哈萨克人为数不多的工业力量，而且还作为哈萨克人的政治中心存在，此城一丢，防线便难以为继。坏消息是，此地无限可守，一览无遗...我们必须早做准备，用血肉守住每一块泥沙！"
- ETS_tu_jue_yi_jia_qin:0 "突厥一家亲："
+ ETS_tu_jue_yi_jia_qin:0 "突厥一家亲"
  ETS_tu_jue_yi_jia_qin_desc:0 "在革命胜利后，东突厥斯坦的革命者举目西望，惊喜的发现，在突厥人的故乡，红色的解放者再一次举起了他们的旗帜...再努力一把，“突厥斯坦”就要迎来解放。"
  ETS_fen_sui_bai_lei:0 "粉碎民族败类"
  ETS_fen_sui_bai_lei_desc:0 "突厥斯坦的同胞现在正在被旧社会的余毒压迫，我们绝对不能眼睁睁的看着他们在地狱中受煎熬！"
