以命偿命、以眼偿眼、以耳偿耳、以牙偿牙

--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -576,9 +576,9 @@
  ETS_RED_radical_socialist_ADJ: "东突厥斯坦"
  ETS_RED_radical_socialist_DEF: "东突厥斯坦苏维埃共和国"
 
- ETS_ALO: "乌斯满军区"
- ETS_ALO_ADJ: "乌斯满军区"
- ETS_ALO_DEF: "乌斯满军区"
+ ETS_ALO: "哈萨克斯坦军区"
+ ETS_ALO_ADJ: "哈萨克斯坦军区"
+ ETS_ALO_DEF: "哈萨克斯坦军区"
  ETS_KYR: "突厥斯坦军事管辖区"
  ETS_KYR_ADJ: "突厥斯坦军事管辖区"
  ETS_KYR_DEF: "突厥斯坦军事管辖区"
@@ -600,6 +600,7 @@
  ETS_our_father: "§Y和蔼的父§!"
  ETS_our_leader: "§Y仁慈的主§!"
  EST_must_return: "§R民主革命党将尽力弥补东突厥斯坦独立运动对他民族同胞的野蛮行径。§!"
+ EST_keep_our_self: "§R我们将全力稳固苏维埃的现有局势！§!"
  ETS_war_is_over: "§R已经没有战争需要继续了§!"
  ALO_get_no_shi: "未失守 £trigger_yes"
  ALO_get_ye_shi: "已失守 £trigger_no"
@@ -611,15 +612,19 @@
  UZB_get_ye_shi: "已失守 £trigger_no"
 
  ETS_tian_shan_de_ying:0 "天山雄鹰"
- ETS_xin_yang_de_rong_yao:0 "“信仰的荣誉”“§RSalah ad-Din”§!"
+ ETS_xin_yang_de_rong_yao:0 "“信仰的荣誉”“§RSalah ad-Din§!”"
  ETS_hong_se_tie_mu_er:0 "红色帖木儿"
 
- ETS_Central_east_war_cat:0 "大西亚战争"
+ ETS_Central_east_war_cat:0 "大中亚战争"
  ETS_Central_east_war_cat_desc:0 "原本被世人视作落后，愚昧的代表而向来被理所应当的认为是俄罗斯或者哪个地区强权的中亚各部族如今在我们的带领下重新站上了世界舞台，世人终于记起了这片诞生过贵霜、塞尔柱、花剌子模和帖木儿帝国的沃土。北方的帝国主义重新将目光看向了中亚的戈壁和绿洲，自认为理所应当的可以从骄傲的游牧民手中要回他们吐出来的东西。他们错了：§R真理§!已来临，虚妄已消逝了————虚妄确是将消逝的...\n\n西亚诸国：\n\n§Y阿拉木图[ALO.GetFlag]§! [ALO_get_has_or_no] \n\n§Y浩罕[KYR.GetFlag]§![KYR_get_has_or_no] \n\n§Y布哈拉[TRK.GetFlag]§![TRK_get_has_or_no] \n\n§Y希瓦[UZB.GetFlag]§![UZB_get_has_or_no]\n"
  ETS_zhun_bei_zhaqn_zheng:0 "主动出击！"
  ETS_bulid_tu_jue_si_tan:0 "建立突厥斯坦军事管辖区"
  ETS_qian_wang_ao_man:0 "前往伊斯坦布尔的使臣"
  ETS_qian_wang_ao_man_desc:0 "敌人的敌人就是朋友，对于我们如今的大敌俄罗斯人而言，他们树敌众多，奥斯曼帝国的哈里发对于捅俄罗斯人一刀子一定很感兴趣。"
+ ETS_qian_wang_de_li:0 "前往德里的使臣"
+ ETS_qian_wang_de_li_desc:0 "敌人的敌人就是朋友，对于我们如今的大敌俄罗斯人而言，他们树敌众多，协约国对于捅俄罗斯人一刀子一定很感兴趣。"
+ ETS_qian_wang_bei_jing:0 "前往北京的使臣"
+ ETS_qian_wang_bei_jingi_desc:0 "敌人的敌人就是朋友，对于我们如今的大敌俄罗斯人而言，他们树敌众多，北京的皇帝对于捅俄罗斯人一刀子一定很感兴趣。"
  ETS_shi_yue_yu_huo:0 "十月的余火"
  ETS_shi_yue_yu_huo_desc:0 "当我们在中亚独立抗战，艰难护家的时，如天降甘霖之前的闪电一般惊喜的事发生了。东亚的革命同志从硝烟中站起，解放东亚势在必得，而且如果我们挥兵一处，则兵锋无往不利。§R全世界无产者，联合起来！§!"
  ETS_war_timer:0 "战争！"
@@ -636,6 +641,9 @@
  ETS_tu_jue_si_tan_tong_yi:0 "突厥斯坦统一"
  ETS_graveyard:0 "帝国坟场"
  ETS_si_zhan_dao_di:0 "死战到底"
+ ETS_zhong_ya_zhi_shang6:0 "走出阴影"
+ ETS_zhong_ya_zhi_shang12:0 "以眼还眼，以牙还牙"
+ ETS_zhong_ya_zhi_shang12_desc:0 "我在《讨伐拉》中对他们制定：“以命偿命、以眼偿眼、以耳偿耳、以牙偿牙；一切创伤，都要抵偿。”"
 
  ETS_ALO_totalist_party_one:0 "东突厥斯坦民主党（哈萨克游击队）"
  ETS_ALO_totalist_party_one_long:0 "东突厥斯坦民主党（哈萨克游击队）"
@@ -679,7 +687,7 @@
  ETS_liang_he_zhi_jian_desc:0 "东突厥斯坦如今已经成为各民族的家园，但举目望去，我们的同胞不但还陷于反动派的泥泞，从黑色星期五危机中的俄罗斯帝国又对着他们的“故土”虎视眈眈。民主革命党可能是他们唯一的希望。经过了内战后的重整，我军已经做好了解放自己的同胞兄弟，迎接一切强敌困难的准备。"
  ETS_yi_jia_ren:0 "一家人吃同一盘饭"
  ETS_yi_jia_ren_desc:0 "在很久以前，西域民族和蒙古人就一起在一起生活，一起保护风吹草低见牛羊的大草原。在数十年前，蒙人党和民族军就在一起抗击封建统治者的残酷压迫，我们现今不但愈发强大，甚至都回到了自己的故乡...那就让我们再次联合起来，一起保卫来之不易的革命果实！"
- ETS_wu_si_man:0 "乌斯满听令！"
+ ETS_wu_si_man:0 "木农阿吉听令！"
  ETS_wu_si_man_desc:0 "差不多得了撒欸！是时候让那些玷污哈萨克大草原的反动派把他们的钩子乖乖闭紧咯！"
  ETS_ma_bei_shang_de:0 "马背上的盟友"
  ETS_ma_bei_shang_de_desc:0 "哈萨克的红军也回到了他们的故乡！快快给朋友斟满美酒，递上烤馕！当然，他们是对抗俄罗斯帝国主义侵略的第一线，同时也是俄罗斯侵略军的首要目标，我们将把主要的军事力量部署在哈萨克大草原上，以保护满腔热忱和我们站在一起的同志们。"
@@ -701,6 +709,8 @@
  ETS_sha_mo_cheng_shi_desc:0 "突厥斯坦的革命政府和我们一样，都处于内战刚刚结束，民生百废待兴的状态，我们很高兴帮助他们恢复内战的创伤，手拉手建立起属于革命者的不朽堡垒。"
  ETS_fang_fan_xiong_zhua:0 "防范熊爪！"
  ETS_fang_fan_xiong_zhua_desc:0 "巨熊的威胁已经高悬在我们头上许久，我们将一定要把主要精力放在迎接这个达摩克里斯之剑上。"
+ ETS_liu_you_yu_li:0 "仍有余力？"
+ ETS_liu_you_yu_li_desc:0 "我们在中亚整军备战，已经做好万全准备，而北方的熊爪却迟迟没能落下...此事实在尴尬。既然我们的战争氛围已经到达极点，还不如调转枪头，向南方输出革命？"
  ETS_san_cheng_zheng:0 "一根针扎不穿三层布"
  ETS_san_cheng_zheng_desc:0 "与俄国的战争不可避免，开战！！！"
  ETS_wen_zhu_fang_xian:0 "稳住阵线！"
@@ -718,6 +728,35 @@
  
  ETS_follow_leader:0 "跟随老大哥"
  ETS_follow_leader_desc:0 "令人意想不到的事情发生了，十月革命过去了二十年不到，居然又一次在俄国重燃，全国上下一片欢庆。现如今，东突厥斯坦各族人民已经处理好了内部事务，准备跟着十月党人的步伐重新登上世界革命的列车。"
+
+ ETS_xi_ya_zhan_zheng_jie_shu:0 "中亚战争结束"
+ ETS_xi_ya_zhan_zheng_jie_shu_desc:0 " "
+ ETS_zhong_ya_zhi_shang:0 "中亚之殇"
+ ETS_zhong_ya_zhi_shang_desc:0 "俄罗斯的兵锋已入腹地，革命的火焰还未升起便已熄灭...我等无话可说，只得咽下苦果。"
+ ETS_zhi_mian_shi_bai:0 "直面战争失败"
+ ETS_zhi_mian_shi_bai_desc:0 "我们为自由而战，为尊严而死。所换来的只有巨大的战争开销和几乎一年的和世界大国的血腥绞肉战。我们是时候面对战争失败的惨况，着手回复红区的日常秩序。"
+ ETS_quan_mian_zheng_dun:0 "全面整顿战后局势"
+ ETS_quan_mian_zheng_dun_desc:0 "战争失败后，那些夹着尾巴藏在暗处的反动势力又浮出水面。旧地主，旧官僚，萨拉菲主义反动分子......一批又一批的土匪从山头中钻出。我们从前线刚刚撤下来的将士虽说疲敝，但艰巨的任务仍然在等待着他们。"
+ ETS_zhan_hou_zhi_xu:0 "战后秩序维稳"
+ ETS_zhan_hou_zhi_xu_desc:0 "战败的阴霾笼罩着我国，无论是工厂车间还是田间地头，随时随地都能碰上哀叹和抽泣。为了保证正常生产，派遣部队监督日常的生产工作是不得不必要的。"
+ ETS_sheng_chan_jian_she:0 "生产建设兵团"
+ ETS_sheng_chan_jian_she_desc:0 "新疆生产力水平本就底下，生产工具更是落后的无一附加。拼尽权利的血腥拉锯更是让红区人民的生活水平困顿不堪。因此，东突厥斯坦中央军委命令部队的一部分将士，就地转业为农业建设部队和工程建设部队，以担负起辅助经济建设的任务。"
+ ETS_ping_heng_yu_suan:0 "平衡预算"
+ ETS_ping_heng_yu_suan_desc:0 "战争带来的一大结果便是革命政府债台高筑，濒临破产。在战后的一段时间后，政府仍然未能及时的改变军事化的生产情况，如今看来，不得不结束这一状态，为大中亚战争的阴影画上句号了。"
+ ETS_lao_ku_zhe_de_dai_yan:0 "穷苦者之代言"
+ ETS_lao_ku_zhe_de_dai_yan_desc:0 "东突厥斯坦的人民绝不能在饥肠辘辘中郁郁而终，把大饼发下去吧。"
+ ETS_fan_tu_jue_he_jie:0 "与泛突厥者和解"
+ ETS_fan_tu_jue_he_jie_desc:0 "战争使得东突厥斯坦政局混乱不堪，只有多党合作与政治协商才能让我们重建治理体系。"
+ ETS_chong_xin_shu_li:0 "重新树立政治目标"
+ ETS_chong_xin_shu_li_desc:0 "东突厥斯坦如今疲敝不堪，我们需要重新思考政权接下来的道路...是重启战火，抑或是坐拥山巅？"
+ ETS_da_ji_fu_bai:0 "打击腐败"
+ ETS_da_ji_fu_bai_desc:0 "在东突厥斯坦对民间的治理全线收缩之后，战后重建的混乱带来的是全党上下从内到外，从上到下的腐败狂潮。种种社会救济，社会保障与社会福利政策给了他们无数丰厚油水可捞，对此，无产阶级的铁拳将会清算老狐狸的种种罪恶。"
+ ETS_jun_shi_hua_guo_jia:0 "军事化国家"
+ ETS_jun_shi_hua_guo_jia_desc:0 "随着生产兵团和针对乡村反动势力的再教育营在黄沙大漠中拔地而起，东突厥斯坦的军用设施像是寄生虫一般在四处生根，军事人员的占比不断增高，虽然说其主要的作用在于维稳，但是一旦战争爆发，这些准军事机关无疑会变成一支又一只的军事预备队...围栏封锁的高墙之中挤满了民间地头的壮年志愿兵和得到改造的囚犯，在这些个地方，就连英法的顾问都不被允许随意进出...§R他们当然很残忍，但你决不能说他们无能。§!"
+ ETS_mo_xu_fu_chou:0 "默许复仇思潮"
+ ETS_mo_xu_fu_chou_desc:0 "民族军之所以能在十年前发展壮大，与对汉人的仇恨绝对脱不开干系——俄罗斯人把中亚的城市夷为平地，将我们的同胞套上枷锁。域内破碎的家庭对此咬牙切齿，大字不识的百姓对于俄族的仇杀更是时有发生——我们对此情绪在人民当中的发酵睁一只眼闭一只眼，§R以武力夺走的，必将被仇愤夺回。§!要想这股情绪缓和下来？那得等到大仇得报再提..."
+ ETS_zai_wu_1938:0 "再无1938"
+ ETS_zai_wu_1938_desc:0 " "
 
  xinren.1.t:0 "击毙赤匪首领！"
  xinren.1.d:0 "一直在准噶尔地区活跃的红俄匪帮首领莫斯莫里夫近日在和布克塞尔劫掠时被当地民团俘获后施以私刑处死，其人所领导的“东突厥斯坦民族军”向来在伊犁，塔城，阿山一带兴风作浪，猖獗至极。\n\n其副手伊万·波利诺夫随后带数千部队大规模袭扰我境内，以图报复匪首莫斯莫里夫之死，其兵锋一度曾触迪化城下，所幸我军与哈密军齐心协力，将其全歼于逃窜路上，其继任者阿合买提江与阿巴索夫分兵逃窜，难成大气。"
