--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -644,6 +644,8 @@
  ETS_zhong_ya_zhi_shang6:0 "走出阴影"
  ETS_zhong_ya_zhi_shang12:0 "以眼还眼，以牙还牙"
  ETS_zhong_ya_zhi_shang12_desc:0 "我在《讨伐拉》中对他们制定：“以命偿命、以眼偿眼、以耳偿耳、以牙偿牙；一切创伤，都要抵偿。”"
+ ETS_gong_xiang_tian_ci:0 "劳有所获"
+ ETS_gong_xiang_tian_ci_desc:0 "先知穆罕默德（愿主赐他平安）说过：“没有人吃得比他所做的更好。”诚实、勤勉的工作总将改变我们的国度与你的人生，劳动吧，公民们。"
 
  ETS_ALO_totalist_party_one:0 "东突厥斯坦民主党（哈萨克游击队）"
  ETS_ALO_totalist_party_one_long:0 "东突厥斯坦民主党（哈萨克游击队）"
@@ -760,6 +762,16 @@
 
  ETS_da_ji_ha_de:0 "大吉哈德"
  ETS_da_ji_ha_de_desc:0 "除真主外，别无神灵"
+ ETS_zhu_de_ci_yu:0 "主的赐予..."
+ ETS_zhu_de_ci_yu_de_desc:0 "“善行不是你们转过脸的方向，而是信仰真主、（被删减）、天使、经典和先知：而且是给予亲属、孤儿、贫困者、乞求者、解救奴隶、坚守祈祷与天课之人...”"
+ ETS_bing_fei_yu_yi_hao_qiang:0 "并非予以豪强"
+ ETS_bing_fei_yu_yi_hao_qiang_desc:0 "“他不是信士；当他的邻居挨饿，而他自己却吃的很饱”"
+ ETS_lao_you_suo_huo:0 "劳有所获"
+ ETS_lao_you_suo_huo_desc:0 "先知穆罕默德（愿主赐他平安）说过：“没有人吃得比他所做的更好。”诚实、勤勉的工作总将改变我们的国度与你的人生，劳动吧，公民们。"
+ ETS_tuan_jie_yi_xin:0 "团结一心"
+ ETS_tuan_jie_yi_xin_desc:0 "“你们要紧紧抓住主的绳索，不可分裂”"
+ ETS_hong_se_jing_shu:0 "红色经书"
+ ETS_hong_se_jing_shu_desc:0 "“真主是至知的主，他按次序降示了《古兰经》，他每时每刻都在创造事物”。毫无疑问，真主现如今也在创造事物，若是按图索骥，便是无耻背叛。"
 
  xinren.1.t:0 "击毙赤匪首领！"
  xinren.1.d:0 "一直在准噶尔地区活跃的红俄匪帮首领莫斯莫里夫近日在和布克塞尔劫掠时被当地民团俘获后施以私刑处死，其人所领导的“东突厥斯坦民族军”向来在伊犁，塔城，阿山一带兴风作浪，猖獗至极。\n\n其副手伊万·波利诺夫随后带数千部队大规模袭扰我境内，以图报复匪首莫斯莫里夫之死，其兵锋一度曾触迪化城下，所幸我军与哈密军齐心协力，将其全歼于逃窜路上，其继任者阿合买提江与阿巴索夫分兵逃窜，难成大气。"
