--- a/localisation/HNN_superevents_l_simp_chinese.yml
+++ b/localisation/HNN_superevents_l_simp_chinese.yml
@@ -95,3 +95,6 @@
  TIB:0 "西藏"
  TIB_ADJ:0 "西藏"
  TIB_DEF:0 "西藏"
+
+ RUS_ice_march_trait: "白军传承"
+ RUS_ice_march_trait_desc: "§L这位领导人乃是俄罗斯内战的老兵与英雄，曾同布党红色分子浴血奋战。如果哪一天俄罗斯大地上再次出现社会主义，那么他必将起身与之抗争。§!"
