--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -646,6 +646,8 @@
  ETS_zhong_ya_zhi_shang12_desc:0 "我在《讨伐拉》中对他们制定：“以命偿命、以眼偿眼、以耳偿耳、以牙偿牙；一切创伤，都要抵偿。”"
  ETS_gong_xiang_tian_ci:0 "劳有所获"
  ETS_gong_xiang_tian_ci_desc:0 "先知穆罕默德（愿主赐他平安）说过：“没有人吃得比他所做的更好。”诚实、勤勉的工作总将改变我们的国度与你的人生，劳动吧，公民们。"
+ ETS_gong_xiang_tian_ci5:0 "“花园”"
+ ETS_gong_xiang_tian_ci5_desc:0 "民族精神描述：古代的经书曾将人死后的世界描述成纵情享受性爱与美酒，男人们能够拥有九位美丽顺从的处女的世界...是真是假我们无从考证，但我们只知道人死前的世界一定要有这两样东西：尊严和自由。"
 
  ETS_ALO_totalist_party_one:0 "东突厥斯坦民主党（哈萨克游击队）"
  ETS_ALO_totalist_party_one_long:0 "东突厥斯坦民主党（哈萨克游击队）"
@@ -770,8 +772,18 @@
  ETS_lao_you_suo_huo_desc:0 "先知穆罕默德（愿主赐他平安）说过：“没有人吃得比他所做的更好。”诚实、勤勉的工作总将改变我们的国度与你的人生，劳动吧，公民们。"
  ETS_tuan_jie_yi_xin:0 "团结一心"
  ETS_tuan_jie_yi_xin_desc:0 "“你们要紧紧抓住主的绳索，不可分裂”"
+ ETS_ren_shan_gong_he:0 "仁善共和"
+ ETS_ren_shan_gong_he_desc:0 " "
  ETS_hong_se_jing_shu:0 "红色经书"
  ETS_hong_se_jing_shu_desc:0 "“真主是至知的主，他按次序降示了《古兰经》，他每时每刻都在创造事物”。毫无疑问，真主现如今也在创造事物，若是按图索骥，便是无耻背叛。"
+ ETS_xiang_wu_tuo_bang:0 "向乌托邦前进"
+ ETS_xiang_wu_tuo_bang_desc:0 "“我确已派遣我的众使者，带着明显的迹象，并降示他们经典与尺度，以便众人维持公义”"
+ ETS_sa_la_ding_zhi_yuan:0 "萨拉丁之愿"
+ ETS_sa_la_ding_zhi_yuan_desc:0 "在穆斯林世界中，自从19世纪后，蒸汽船喷出的氤氲将主的光辉笼罩之后，“萨拉丁”一词便不再被人提起。圣城已经沦陷，再无守卫；尊严已经飘散，无需提起。时过境迁，无人能想到骑士之君伴随着东方的太阳一同归来，阿合买提江的愿望实现了——苦苦祈祷的圣裔们终于意识到自己的神圣血脉，拿起身边的武器加入史无前例的吉哈德之中。"
+ ETS_li_xing_chong_bai:0 "摆脱愚昧"
+ ETS_li_xing_chong_bai_desc:0 "“你们不要为安拉树立任何比拟物，安拉不宽恕以物配主的罪过，那些绘制有生命之物形象之人将在复苏日遭到天罚。”"
+ ETS_di_shang_tian_guo:0 "地上天国终建成"
+ ETS_di_shang_tian_guo_desc:0 "“全人类原来是一个民族；真主派遣先知，带来清晰的其实，警示世人，以便人们不再争论。真主通过这些启示使信仰成为人们的指南。”"
 
  xinren.1.t:0 "击毙赤匪首领！"
  xinren.1.d:0 "一直在准噶尔地区活跃的红俄匪帮首领莫斯莫里夫近日在和布克塞尔劫掠时被当地民团俘获后施以私刑处死，其人所领导的“东突厥斯坦民族军”向来在伊犁，塔城，阿山一带兴风作浪，猖獗至极。\n\n其副手伊万·波利诺夫随后带数千部队大规模袭扰我境内，以图报复匪首莫斯莫里夫之死，其兵锋一度曾触迪化城下，所幸我军与哈密军齐心协力，将其全歼于逃窜路上，其继任者阿合买提江与阿巴索夫分兵逃窜，难成大气。"
